# robotics-from-zero-tutorial

./: README.md
src/: readmd.md
src/lesson1/: lesson1.cpp
src/lesson10/: PID.py  README.md  get_all_body_qpos_qvel_ctrl.py  get_all_body_xpos.py  joint_space_trajectory_tracking_demo.py
src/lesson11/cv_trainning/: README.md  apriltag.py  camera_calibration.py  get_apriltag_pos.py  mujoco_get_camera_picture.py  sensordata.py
src/lesson11/cv_trainning/demo/: depth.npy  scene_with_apriltag.xml  sim_camera_tag_pose_demo.py
src/lesson2/: lesson2.cpp
src/lesson3/: lesson3.cpp
src/lesson4/ros2_comm_demo/: CMakeLists.txt  package.xml
src/lesson4/ros2_comm_demo/launch/: launch.py
src/lesson4/ros2_comm_demo/src/: battery_node.cpp  command_node.cpp  pose_node.cpp  task_manager_node.cpp
src/lesson5/lesson5_composition/: CMakeLists.txt  package.xml
src/lesson5/lesson5_composition/include/lesson5_composition/: listener.hpp  talker.hpp
src/lesson5/lesson5_composition/src/: intra_process_pubsub.cpp  listener.cpp  talker.cpp
src/lesson6/: lesson6.py
src/lesson7/: lesson7_Modified_D-H.py
src/lesson8/: draw_line_and_circle.cpp
